Will add comments later. Data stuff.

--- a/CthulhuBotPy/web/index.html
+++ b/CthulhuBotPy/web/index.html
@@ -11,7 +11,7 @@
         
         eel.expose(say_hello_js);               // Expose this function to Python
         function say_hello_js(x) {
-            // console.log("Hello from " + x);
+            console.log("Hello from " + x);
             // console.log(z);
             // console.log(y);
         }
