--- a/CthulhuBotPy/web/loading.html
+++ b/CthulhuBotPy/web/loading.html
@@ -9,7 +9,8 @@
     <style>
         body{
             /* background-image: url('./Images/Icon/DiscordRotationConnecting.gif'); */
-            background: #2c2f33;
+            /* background: #2c2f33; */
+            background: rgb(255,0,170);
             overflow: hidden;
         }
         .flex-container {
@@ -24,7 +25,7 @@
         }
         #DiscordLoading {
             margin-top: 50px;
-            background-image: url('./Images/Icons/DiscordRotationConnecting.gif');
+            background-image: url('./Images/Icons/pink_discord.gif');
             background-size:contain;
             background-repeat:no-repeat;
             /* background-color:blueviolet; */
