--- a/CthulhuBotPy/web/index.html
+++ b/CthulhuBotPy/web/index.html
@@ -81,8 +81,7 @@
                 </div>
 
                 <div id="messageContainer">
-                    <div id="messageArea">
-                    </div>
+                    <div id="messageArea"></div>
                     <div id="messageBox">
                         <div id="message_left">
                             <div id="attach">
