Just edited messages, and renamed.

--- a/CthulhuBotPy/web/index.html
+++ b/CthulhuBotPy/web/index.html
@@ -104,7 +104,9 @@
                 </div>
             </div>
             <div class="flex-container" id="userBar">
-                  
+                <div id="memberContainer">
+                    <div id="memberArea"></div>
+                </div>
             </div>
         </div>
         <!-- <textarea name="message_box" id="message_box" cols="" rows="10"></textarea> -->
