Fixed new message colours, added spellcheck

--- a/CthulhuBotPy/web/index.html
+++ b/CthulhuBotPy/web/index.html
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                         <div id="message_input">
-                            <textarea name="message_box" id="message_box" rows="1" spellcheck="true" placeholder=""></textarea>
+                            <textarea name="message_box" id="message_box" rows="1" spellcheck="true" lang="en" placeholder=""></textarea>
                         </div>
                         <div id="message_right">
                             <div id="gift">
